Fix mobile overflow issue

--- a/src/styles/partials/pages/_blog.scss
+++ b/src/styles/partials/pages/_blog.scss
@@ -249,6 +249,7 @@
     .cta {
         background: $color--primary-dark;
         overflow: visible;
+        overflow-x: hidden;
         position: relative;
 
         @include media-breakpoint-up(lg) {
