--- a/src/styles/partials/pages/_contact.scss
+++ b/src/styles/partials/pages/_contact.scss
@@ -62,6 +62,7 @@
     .cta {
         margin-top: calc(-100px + 7rem);
         overflow: visible;
+        overflow-x: hidden;
         padding-bottom: 150px;
         position: relative;
 
