--- a/src/styles/partials/pages/_post.scss
+++ b/src/styles/partials/pages/_post.scss
@@ -172,6 +172,7 @@
     .cta {
         background: $color--primary-dark;
         overflow: visible;
+        overflow-x: hidden;
         position: relative;
 
         @include media-breakpoint-up(lg) {
